fixed layout issues when containers are extremely wide

--- a/lesson2/css/stylesheet.css
+++ b/lesson2/css/stylesheet.css
@@ -28,7 +28,7 @@ header {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     font-family: 'Cairo', sans-serif;
-    grid-template-rows: 6% auto auto;
+    grid-template-rows: auto auto auto auto auto;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(0, 0, 0, 0.3);
 }
 
@@ -38,16 +38,18 @@ header {
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(0, 0, 0, 0.3);
 }
 
-h3, main p, a {
-    margin-left: 5px;
-}
-
 h3 {
     color: #121212;
     opacity: .87;
     margin-top: 10px;
     margin-bottom: 11px;
     font-size: 6vw;
+    margin-left: 5px;
+}
+
+h4 {
+    text-align: center;
+    opacity: .75;
 }
 
 main p {
@@ -66,6 +68,11 @@ a {
 
 a:visited {
     color: #AB97C3;
+}
+
+.white-content {
+    align-items: center;
+    grid-row: 5;
 }
 
 .repetition .block {
@@ -96,6 +103,11 @@ img {
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.05);
     border-radius: 10px;
+}
+
+footer {
+    padding-top: 3px;
+    padding-bottom: 5px;
 }
 
 .footer-year {
